a/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress1
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
 #  nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-name: INGRESSCOOKIE
spec:
  ingressClassName: nginx
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 4200
