a/web3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress-v2
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: persistent
spec:
  ingressClassName: nginx
  rules:
    - host: mytravel-123.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service2
                port:
                  number: 4200
